# python-gorilla

./: .gitignore  CODEX.md  LICENSE  README.md  main.py  pyproject.toml
src/python_gorilla/: __init__.py
tests/: test_gorilla.py
webapp/: index.html  main.py
