[project]
name = "python-gorilla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.3.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.135.2",
    "numpy>=2.3.0",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
